--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,35 +4,53 @@
     android:background="@color/colorAccent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:gravity="center"
+    android:paddingBottom="16dp"
+    android:paddingRight="16dp"
+    android:gravity="start"
     android:orientation="vertical"
     tools:context="com.example.admin.primeornot.MainActivity">
 
+
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="51dp"
+        android:layout_height="wrap_content"
+        android:text="Hint"
+        android:id="@+id/hint"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/round_button"
+        android:layout_gravity="right" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cheat"
+        android:id="@+id/cheat"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/round_button"
+        android:layout_gravity="right" />
+
     <TextView
         android:id="@+id/textViewer"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="25sp"
-        android:text="@string/question" />
+        android:text="@string/question"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="351dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:id="@+id/getNumber"
         android:layout_marginTop="15dp"
-        android:layout_marginBottom="20dp"
         android:textAlignment="center"
         android:textSize="40sp"
         android:freezesText="true"
-        android:text="number"/>
-
-
+        android:text="number" />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -42,6 +60,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/ansYes"
         android:text="@string/yes"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="10dp"
         android:minWidth="110sp"/>
         <!--android:theme="@style/ButtonStyle"/>-->
 
@@ -53,12 +73,14 @@
         android:minWidth="110sp"/>
 
     </LinearLayout>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/next"
         android:textAllCaps="true"
         android:id="@+id/next"
+        android:layout_marginLeft="120dp"
         android:layout_centerHorizontal="true"
         android:minWidth="120sp"/>
     <LinearLayout
@@ -87,6 +109,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/flag"
         android:freezesText="true"
+        android:text="flag"
         android:visibility="invisible"/>
+
 
 </LinearLayout>
